# QMIS

./: .dockerignore  .envrc  .gitignore  .woodpecker.yaml  .woodpecker.yml  Dockerfile  QUANT_MACRO_INT_SPEC.md  QUANT_MACRO_INT_SPEC_ADDENDUM.md  README.md  docker-compose.yml  main.py  pyproject.toml
db/: macro_sentiment_engine.db
docker/: deploy.sh  entrypoint.sh
docs/plans/: 2026-03-08-issue-1-qmis-foundation.md  2026-03-08-issue-10-news-placeholder.md  2026-03-08-issue-11-feature-engine.md  2026-03-08-issue-12-macro-scoring-regime.md  2026-03-08-issue-13-correlation-engine.md  2026-03-08-issue-14-leadlag-anomalies-cycles.md  2026-03-08-issue-15-alert-engine.md  2026-03-08-issue-16-rich-cli-dashboard.md  2026-03-08-issue-17-scheduling-entrypoints.md  2026-03-08-issue-18-fastapi-read-surface.md  2026-03-08-issue-19-docker-single-container.md  2026-03-08-issue-2-duckdb-bootstrap.md  2026-03-09-ci-deploy-script.md  (+29 more)
logs/: macro_regime_history.csv
scripts/: macro_sentiment_engine.py  run_alerts.py  run_analysis.py  run_collectors.py  run_dashboard.py  run_operator_console.py
state/: macro_sentiment_engine.db
tests/: test_api.py  test_config.py  test_deployment_assets.py  test_macro_sentiment_engine.py  test_operator_console.py  test_qmis_foundation.py  test_scheduling_entrypoints.py  test_schema.py  test_storage.py  test_web_scaffold.py
web/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+100 files in other folders)
